# google-gemini-genai-samples

./: .gitignore  .pre-commit-config.yaml  README.md  env.sample  pyproject.toml  requirements.dev.txt  requirements.txt  test_payload.json
gemma/: test.py
mlartifacts/304615249005037209/traces/79fbc70e6c214614a48009284b268efd/artifacts/: traces.json
mlartifacts/606421605802047302/traces/51cc042f2bf54eda840678c974085ac4/artifacts/: traces.json
mlartifacts/606421605802047302/traces/91b2b03e324f4e11809bf583cf6f5549/artifacts/: traces.json
notebooks/: day-1-evaluation-and-structured-output.ipynb  day-1-prompting.ipynb  day-4-fine-tuning-a-custom-model.ipynb  gen-ai-course-capstone copy.ipynb  gen-ai-course-capstone.ipynb  sample.ipynb
notebooks/kaggle-agents-course/: day-1a-from-prompt-to-action.ipynb  day-1b-agent-architectures.ipynb  day-2a-agent-tools.ipynb  day-2b-agent-tools-best-practices.ipynb  day-3a-agent-sessions.ipynb  day-3b-agent-memory.ipynb  day-4a-agent-observability.ipynb  day-4b-agent-evaluation.ipynb  day-5a-agent2agent-communication.ipynb
notebooks/kaggle-gen-ai-course/: day-2-classifying-embeddings-with-keras.ipynb  day-2-document-q-a-with-rag.ipynb  day-4-google-search-grounding.ipynb
notebooks/kaggle-gen-ai-course/day-1/: day-1-evaluation-and-structured-output.ipynb  day-1-prompting.ipynb
notebooks/kaggle-gen-ai-course/day-2/: day-2-classifying-embeddings-with-keras.ipynb  day-2-document-q-a-with-rag.ipynb  day-2-embeddings-and-similarity-scores.ipynb
notebooks/kaggle-gen-ai-course/day-3/: day-3-building-an-agent-with-langgraph.ipynb  day-3-function-calling-with-the-gemini-api.ipynb
notebooks/kaggle-gen-ai-course/day-4/: day-4-fine-tuning-a-custom-model.ipynb  day-4-google-search-grounding.ipynb  gen-ai-course-capstone copy.ipynb  gen-ai-course-capstone.ipynb
scripts/: cleanup.sh
src/: gemini_test.py  invoke_eval_api.py
