
# Poetry-specific settings.
[project]
name = "google-gemini-gen-ai-samples"
version = "0.1.0"
description = "A collection of GenAI samples for Google Gemini."
requires-python = "~=3.12"
readme = "README.md"
authors = []

# Runtime dependencies of the project.
dependencies = [
    "requests",
    "pandas",
    "numpy",
    "scikit-learn~=1.6.1",
    "mlflow~=3.0.0rc1",
    "lagom~=2.7.5",
    "google-genai~=1.14.0",
    "google-adk~=0.4.0",
    "google-api-core~=2.24.2"

]
# Development dependencies of the project.
[dependency-groups]
dev = [
    "pytest",
    "pytest-dotenv",
    "python-dotenv",
    "build",
    "pre-commit",
    "ruff",
    "ipykernel",
    "ipython",
    "pre-commit",
    "nbstripout",
    "setuptools",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "TID"]

[tool.ruff.format]
docstring-code-format = true

[tool.pyright]
typeCheckingMode = "basic"