
# Poetry-specific settings.
[project]
name = "google-gemini-gen-ai-samples"
version = "0.1.0"
description = "A collection of GenAI samples for Google Gemini."
requires-python = ">=3.12, <3.13"
readme = "README.md"
authors = []

# Runtime dependencies of the project.
dependencies = [
    "requests",
    "pandas",
    "numpy",
    "scikit-learn",
    "mlflow",
    "lagom",
    "google-genai",
    "google-adk",
    "google-api-core"

]
# Development dependencies of the project.
[dependency-groups]
dev = [
    "pytest",
    "pytest-dotenv",
    "python-dotenv",
    "build",
    "pre-commit",
    "ruff",
    "ipykernel",
    "ipython",
    "nbstripout",
    "setuptools",
    "rich",
    "tqdm",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "TID"]

[tool.ruff.format]
docstring-code-format = true

[tool.pyright]
typeCheckingMode = "basic"

[tool.ty.src]
root = "./src"

[tool.ruff]
exclude = ["notebooks"]
line-length = 200
